# tucan

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.in  gen.sh  mkinstalldirs  tucan.spec.in
config/: Makefile.am  TucanConfig.xml  procmail.tucan.in  tucan_procmail_filter.py
db/: Makefile.am  db_install.py
docs/: Makefile.am  exception_list
docs/html/: General.html  HIER.html  MESSAGE_READ.html  Makefile.am  TucanAddress.html  TucanAddressBookAddress.html  TucanAddressBookAddressFactory.html  TucanAddressBookFolder.html  TucanAddressBookFolderFactory.html  TucanAddressBookMessage.html  TucanAddressBookMessageFactory.html  TucanAddressBookStore.html  TucanAddressBookStoreFactory.html  TucanAddressBookTransport.html  TucanAddressBookTransportFactory.html  TucanAddressFactory.html  TucanAttribute.html  TucanAuth.html  TucanAuthFactory.html  TucanBbsAddress.html  TucanBbsAddressFactory.html  TucanBbsFolder.html  TucanBbsFolderFactory.html  TucanBbsMessage.html  TucanBbsMessageFactory.html  TucanBbsStore.html  TucanBbsStoreFactory.html  TucanBbsTransport.html  TucanBbsTransportFactory.html  TucanCalendarAddress.html  TucanCalendarAddressFactory.html  TucanCalendarFolder.html  TucanCalendarFolderFactory.html  TucanCalendarMessage.html  TucanCalendarMessageFactory.html  TucanCalendarStore.html  TucanCalendarStoreFactory.html  TucanCalendarTransport.html  TucanCalendarTransportFactory.html  TucanData.html  (+50 more)
examples/clients/: Makefile.am  addressbook.py  multipart.py  transfer.py
idl/: Makefile.am  Tucan.idl  TucanAddress.idl  TucanAddressBookAddress.idl  TucanAddressBookFolder.idl  TucanAddressBookMessage.idl  TucanAddressBookStore.idl  TucanAddressBookTransport.idl  TucanAuth.idl  TucanBbsAddress.idl  TucanBbsFolder.idl  TucanBbsMessage.idl  TucanBbsStore.idl  TucanBbsTransport.idl  TucanCalendarAddress.idl  TucanCalendarFolder.idl  TucanCalendarMessage.idl  TucanCalendarStore.idl  TucanCalendarTransport.idl  TucanConfig.idl  TucanData.idl  TucanDirectory.idl  TucanEmailAddress.idl  TucanEmailFetcher.idl  TucanEmailFolder.idl  TucanEmailMessage.idl  TucanEmailStore.idl  TucanEmailTransport.idl  TucanFaxAddress.idl  TucanFaxFolder.idl  TucanFaxMessage.idl  TucanFaxStore.idl  TucanFaxTransport.idl  TucanFolder.idl  TucanMessage.idl  TucanSMTPTransport.idl  TucanSession.idl  TucanStore.idl  TucanTransport.idl  TucanTypes.idl  (+7 more)
init/: .cvsignore  Makefile.am  tucan_server.in
m4/: Makefile.am  XercesC.m4  omniORB3.m4
src/: .cvsignore  Makefile.am  Makefile.in  Tucan.hh  TucanAddressBookAddress_i.cc  TucanAddressBookAddress_i.hh  TucanAddressBookFolder_i.cc  TucanAddressBookFolder_i.hh  TucanAddressBookMessage_i.cc  TucanAddressBookMessage_i.hh  TucanAddressBookStore_i.cc  TucanAddressBookStore_i.hh  TucanAddressBookTransport_i.cc  TucanAddressBookTransport_i.hh  TucanAuth_i.cc  TucanAuth_i.hh  TucanBbsAddress_i.cc  TucanBbsAddress_i.hh  TucanBbsFolder_i.cc  TucanBbsFolder_i.hh  TucanBbsMessage_i.cc  TucanBbsMessage_i.hh  TucanBbsStore_i.cc  TucanBbsStore_i.hh  TucanBbsTransport_i.cc  TucanBbsTransport_i.hh  TucanCalendarAddress_i.cc  TucanCalendarAddress_i.hh  TucanCalendarFolder_i.cc  TucanCalendarFolder_i.hh  TucanCalendarMessage_i.cc  TucanCalendarMessage_i.hh  TucanCalendarStore_i.cc  TucanCalendarStore_i.hh  TucanCalendarTransport_i.cc  TucanCalendarTransport_i.hh  TucanConfig.cc  TucanConfig.hh  TucanData_i.cc  TucanData_i.hh  (+53 more)
test/: Makefile  Makefile.am  README  test_tucan
test/TucanAddressBook/: Makefile.am  TucanAddressBook
test/TucanBbs/: TucanBbs
test/TucanCalendar/: TucanCalendar
test/TucanEmail/: Makefile.am  TucanEmail
utils/: .cvsignore  Makefile.am  authorize.c
