EXTRA_DIST = Tucan.idl \
	TucanAddress.idl \
	TucanAddressBookAddress.idl \
	TucanAddressBookFolder.idl \
	TucanAddressBookMessage.idl \
	TucanAddressBookStore.idl \
	TucanAddressBookTransport.idl \
	TucanAuth.idl \
	TucanBbsAddress.idl \
	TucanBbsFolder.idl \
	TucanBbsMessage.idl \
	TucanBbsStore.idl \
	TucanBbsTransport.idl \
	TucanCalendarAddress.idl \
	TucanCalendarFolder.idl \
	TucanCalendarMessage.idl \
	TucanCalendarStore.idl \
	TucanCalendarTransport.idl \
	TucanConfig.idl \
	TucanData.idl \
	TucanDirectory.idl \
	TucanEmailAddress.idl \
	TucanEmailFetcher.idl \
	TucanEmailFolder.idl \
	TucanEmailMessage.idl \
	TucanEmailStore.idl \
	TucanEmailTransport.idl \
	TucanFaxAddress.idl \
	TucanFaxFolder.idl \
	TucanFaxMessage.idl \
	TucanFaxStore.idl \
	TucanFaxTransport.idl \
	TucanFolder.idl \
	TucanMessage.idl \
	TucanSession.idl \
	TucanSMTPTransport.idl \
	TucanStore.idl \
	TucanTransport.idl \
	TucanTypes.idl \
	TucanUserPrefs.idl \
	TucanVoiceAddress.idl \
	TucanVoiceFolder.idl \
	TucanVoiceMessage.idl \
	TucanVoiceStore.idl \
	TucanVoiceTransport.idl \
	generate.py


Idldir = $(datadir)/idl/tucan

Idl_DATA = Tucan.idl \
	TucanAddress.idl \
	TucanAddressBookAddress.idl \
	TucanAddressBookFolder.idl \
	TucanAddressBookMessage.idl \
	TucanAddressBookStore.idl \
	TucanAddressBookTransport.idl \
	TucanAuth.idl \
	TucanBbsAddress.idl \
	TucanBbsFolder.idl \
	TucanBbsMessage.idl \
	TucanBbsStore.idl \
	TucanBbsTransport.idl \
	TucanCalendarAddress.idl \
	TucanCalendarFolder.idl \
	TucanCalendarMessage.idl \
	TucanCalendarStore.idl \
	TucanCalendarTransport.idl \
	TucanConfig.idl \
	TucanData.idl \
	TucanDirectory.idl \
	TucanEmailAddress.idl \
	TucanEmailFetcher.idl \
	TucanEmailFolder.idl \
	TucanEmailMessage.idl \
	TucanEmailStore.idl \
	TucanEmailTransport.idl \
	TucanFaxAddress.idl \
	TucanFaxFolder.idl \
	TucanFaxMessage.idl \
	TucanFaxStore.idl \
	TucanFaxTransport.idl \
	TucanFolder.idl \
	TucanMessage.idl \
	TucanSession.idl \
	TucanStore.idl \
	TucanTransport.idl \
	TucanTypes.idl \
	TucanUserPrefs.idl \
	TucanVoiceAddress.idl \
	TucanVoiceFolder.idl \
	TucanVoiceMessage.idl \
	TucanVoiceStore.idl \
	TucanVoiceTransport.idl \
	generate.py
