EXTRA_DIST = General.html \
	HIER.html \
	TucanAddress.html \
	TucanAddressBookAddress.html \
	TucanAddressBookAddressFactory.html \
	TucanAddressBookFolder.html \
	TucanAddressBookFolderFactory.html \
	TucanAddressBookMessage.html \
	TucanAddressBookMessageFactory.html \
	TucanAddressBookStore.html \
	TucanAddressBookStoreFactory.html \
	TucanAddressBookTransport.html \
	TucanAddressBookTransportFactory.html \
	TucanAddressFactory.html \
	TucanAttribute.html \
	TucanAuth.html \
	TucanAuthFactory.html \
	TucanBbsAddress.html \
	TucanBbsAddressFactory.html \
	TucanBbsFolder.html \
	TucanBbsFolderFactory.html \
	TucanBbsMessage.html \
	TucanBbsMessageFactory.html \
	TucanBbsStore.html \
	TucanBbsStoreFactory.html \
	TucanBbsTransport.html \
	TucanBbsTransportFactory.html \
	TucanCalendarAddress.html \
	TucanCalendarAddressFactory.html \
	TucanCalendarFolder.html \
	TucanCalendarFolderFactory.html \
	TucanCalendarMessage.html \
	TucanCalendarMessageFactory.html \
	TucanCalendarStore.html \
	TucanCalendarStoreFactory.html \
	TucanCalendarTransport.html \
	TucanCalendarTransportFactory.html \
	TucanData.html \
	TucanDataFactory.html \
	TucanDirectory.html \
	TucanDirectoryFactory.html \
	TucanEmailAddress.html \
	TucanEmailAddressFactory.html \
	TucanEmailFetcher.html \
	TucanEmailFetcherFactory.html \
	TucanEmailFolder.html \
	TucanEmailFolderFactory.html \
	TucanEmailMessage.html \
	TucanEmailMessageFactory.html \
	TucanEmailStore.html \
	TucanEmailStoreFactory.html \
	TucanEmailTransport.html \
	TucanEmailTransportFactory.html \
	TucanFaxAddress.html \
	TucanFaxAddressFactory.html \
	TucanFaxFolder.html \
	TucanFaxFolderFactory.html \
	TucanFaxMessage.html \
	TucanFaxMessageFactory.html \
	TucanFaxStore.html \
	TucanFaxStoreFactory.html \
	TucanFaxTransport.html \
	TucanFaxTransportFactory.html \
	TucanFolder.html \
	TucanFolderFactory.html \
	TucanMessage.html \
	TucanMessageHeader.html \
	TucanMessageFactory.html \
	TucanSession.html \
	TucanSessionFactory.html \
	TucanStore.html \
	TucanSMTPTransport.html \
	TucanSMTPTransportFactory.html \
	TucanStoreFactory.html \
	TucanTransport.html \
	TucanTransportFactory.html \
	TucanUserPrefs.html \
	TucanUserPrefsFactory.html \
	TucanVoiceAddress.html \
	TucanVoiceAddressFactory.html \
	TucanVoiceFolder.html \
	TucanVoiceFolderFactory.html \
	TucanVoiceMessage.html \
	TucanVoiceMessageFactory.html \
	TucanVoiceStore.html \
	TucanVoiceStoreFactory.html \
	TucanVoiceTransport.html \
	TucanVoiceTransportFactory.html \
	index.html \
	icon1.gif \
	icon2.gif
